--- a/Spring/Photostagram/src/main/resources/static/css/profile.css
+++ b/Spring/Photostagram/src/main/resources/static/css/profile.css
@@ -120,6 +120,7 @@
 
     #pro > section > .myList {margin-top: 50px;}
     #pro > section > .myList > .pic {
+        position: relative;
         float:left;
         margin: 5px;
     }
@@ -129,7 +130,8 @@
         height: 300px;
         overflow: hidden;
     }
-    #pro > section > .myList > .pic > a > img {width: 100%; height: 100%; object-fit:cover;}
+    #pro > section > .myList > .pic > a > img {width: 100%; height: 100%; object-fit:cover; position:relative;}
+    #pro > section > .myList > .pic > a > video {width: 100%; height: 100%; object-fit:cover; position:relative;}
 
   .fModal {
     display: none;
@@ -551,6 +553,13 @@
         box-sizing: border-box;
      }
     .settingModal > ul > li > a {font-size: 14px; font-weight: bold;}
+
+    .faIcons {
+      position: absolute;
+      right: 5px;
+      top: 5px;
+      color: white;
+    }
 
 
 
