--- a/Spring/Photostagram/src/main/resources/static/css/profileModify.css
+++ b/Spring/Photostagram/src/main/resources/static/css/profileModify.css
@@ -12,7 +12,9 @@
     input, textarea {outline: none;}
 
     #modi {
-        width: 1000px;
+        float: left;
+        width: 1200px;
+        display: block;
         margin-left: 500px;
         margin-top: 50px;
     }
@@ -21,13 +23,20 @@
     /*** profileModify ***/
 
     #modi > #myInfo {
-        width: 800px;
-        height: auto;
+
+        width: 1000px;
+        height: 850px;
         border: 1px solid #e9e9e9;
         background: white;
         margin-bottom: 100px;
     }
-    #myInfo > div {margin-left: 100px; margin-top:30px; width:400px; height:80px; top: 20px; position: relative; left: 15px;}
+    #myInfo > div {
+        float: left;
+       margin-top: 30px;
+       top: 20px;
+       position: relative;
+       left: 15px;
+    }
     /***
     #pro > section > .myProfile > .proPhoto > div {width: 150px; height: 150px; border-radius: 70%; overflow: hidden;}
     #pro > section > .myProfile > .proPhoto > div > img {width: 100%; height: 100%; object-fit: cover;}
@@ -37,21 +46,21 @@
     #myInfo > div > div {margin-left: 20px; margin-top:5px; float: left; width: 150px; position: relative;}
     #myInfo > div > div > span {float: left; font-size: 18px;}
     #myInfo > div > div > a {float: left; color: #32a4ff; font-weight: bold; font-size: 15px;}
-    #myInfo > form {margin-left: 10px; border-collapse:collapse;}
-    #myInfo > form > table > tbody > tr {position: relative;}
-    #myInfo > form > table > tbody > tr > td:nth-child(1) {width: 150px; text-align:right;}
-    #myInfo > form > table > tbody > tr > td:nth-child(2) {padding: 15px;}
-    #myInfo > form > table > tbody > tr > td:nth-child(2) > input {width: 350px; height: 35px; border: 1px solid #dcdcdc; font-size: 15px;}
-    #myInfo > form > table > tbody > tr > td:nth-child(2) > textarea {width: 350px; height: 50px; border: 1px solid #dcdcdc; font-size: 15px; resize: none;}
-    #myInfo > form > table > tbody > tr > td:nth-child(2) > #check {width: 15px; height: 15px;}
-    #myInfo > form > table > tbody > tr > #private {color: #808080; font-size: 12px; width: 350px;}
-    #myInfo > form > table > tbody > tr > td:nth-child(1) > span {font-weight: bold; font-size: 17px;}
-    #myInfo > form > table > tbody > tr > td:nth-child(2) > span {display: block; color: #808080; width: 350px; font-size: 12px; margin-top: 10px;}
-    #myInfo > form > table > tbody > tr:nth-child(1) > td:nth-child(1) {position:relative; display: block; top: 20px;}
-    #myInfo > form > table > tbody > tr:nth-child(4) > td:nth-child(1) {position:relative; display: block; top: 20px;}
-    #myInfo > form > table > tbody > tr:nth-child(9) > td:nth-child(2) > span {float: left;}
-    #myInfo > form > table > tbody > tr:nth-child(9) > td:nth-child(2) {display: block;}
-    #myInfo > a {margin-left:500px; font-weight: bold; color: #32a4ff; padding: 10px; font-size: 14px;}
+    #myInfo > div > form {width: 500px; margin-left: 10px; border-collapse:collapse;}
+    #myInfo > div > form > table > tbody > tr {position: relative;}
+    #myInfo > div > form > table > tbody > tr > td:nth-child(1) {width: 150px; text-align:right;}
+    #myInfo > div > form > table > tbody > tr > td:nth-child(2) {padding: 15px;}
+    #myInfo > div > form > table > tbody > tr > td:nth-child(2) > input {width: 350px; height: 35px; border: 1px solid #dcdcdc; font-size: 15px;}
+    #myInfo > div > form > table > tbody > tr > td:nth-child(2) > textarea {width: 350px; height: 50px; border: 1px solid #dcdcdc; font-size: 15px; resize: none;}
+    #myInfo > div > form > table > tbody > tr > td:nth-child(2) > #check {width: 15px; height: 15px;}
+    #myInfo > div > form > table > tbody > tr > #private {color: #808080; font-size: 12px; width: 350px;}
+    #myInfo > div > form > table > tbody > tr > td:nth-child(1) > span {font-weight: bold; font-size: 17px;}
+    #myInfo > div > form > table > tbody > tr > td:nth-child(2) > span {display: block; color: #808080; width: 350px; font-size: 12px; margin-top: 10px;}
+    #myInfo > div > form > table > tbody > tr:nth-child(1) > td:nth-child(1) {position:relative; display: block; top: 20px;}
+    #myInfo > div > form > table > tbody > tr:nth-child(4) > td:nth-child(1) {position:relative; display: block; top: 20px;}
+    #myInfo > div > form > table > tbody > tr:nth-child(9) > td:nth-child(2) > span {float: left;}
+    #myInfo > div > form > table > tbody > tr:nth-child(9) > td:nth-child(2) {display: block;}
+    #myInfo > div > a {margin-left:500px; font-weight: bold; color: #32a4ff; padding: 10px; font-size: 14px;}
     #check {float: left;}
 
     #myModify {
@@ -69,13 +78,19 @@
     /*** passChange ***/
 
     #modi > #myPass {
+        float: left;
         width: 800px;
-        height: 500px;
+        height: 850px;
         border: 1px solid #e9e9e9;
         background: white;
         margin-bottom: 100px;
     }
-    #myPass > div {margin-left: 100px; margin-top:30px; width:400px; height:80px; top: 20px; position: relative; left: 15px;}
+    #myPass > div {
+       margin-top: 30px;
+       top: 20px;
+       position: relative;
+       left: 15px;
+    }
     /***
     #pro > section > .myProfile > .proPhoto > div {width: 150px; height: 150px; border-radius: 70%; overflow: hidden;}
     #pro > section > .myProfile > .proPhoto > div > img {width: 100%; height: 100%; object-fit: cover;}
@@ -85,7 +100,11 @@
     #myPass > div > div {margin-left: 20px; margin-top:5px; float: left; width: 150px; position: relative;}
     #myPass > div > div > span {float: left; font-size: 18px;}
     #myPass > div > div > a {float: left; color: #32a4ff; font-weight: bold; font-size: 15px;}
-    #myPass > form {margin-left: 10px; border-collapse:collapse;}
+    #myPass > form {
+       margin-left: 100px;
+       border-collapse: collapse;
+       margin-top: 100px;
+    }
     #myPass > form > table > tbody > tr {position: relative;}
     #myPass > form > table > tbody > tr > td:nth-child(1) {width: 150px; text-align:right;}
     #myPass > form > table > tbody > tr > td:nth-child(2) {padding: 15px;}
@@ -111,3 +130,17 @@
         color: #fff;
         font-weight: bold;
     }
+
+    #mySelect {
+        width: 200px;
+        height: 850px;
+        float: left;
+        border: 1px solid #e9e9e9;
+        background: white;
+    }
+
+    #mySelect > div {height: 50px;}
+    #mySelect > div > a {display:flex; width:100%; font-size: 14px; line-height: 50px; text-align: center; margin-left: 10px;}
+    #mySelect > div:hover:not(.currentMenu) {cursor: pointer; background: #fafafa; border-left: 2px solid #a4a4a4;}
+    #mySelect > .currentMenu {border-left: 2px solid black;}
+    #mySelect > div > .currentSet {font-weight: bold;}
