--- a/Spring/Photostagram/src/main/resources/templates/layout/profileLayout.html
+++ b/Spring/Photostagram/src/main/resources/templates/layout/profileLayout.html
@@ -25,6 +25,7 @@
     <script th:src="@{/js/aside.js}"></script>
     <script th:src="@{/js/profileUpload.js}"></script>
     <script th:src="@{/js/profileModal.js}"></script>
+    <script th:src="@{/js/profilePass.js}"></script>
     <script th:src="@{/js/post.js}"></script>
     <script th:src="@{/js/counting.js}"></script>
     <script th:src="@{/js/myFollow.js}"></script>
