--- a/Spring/Photostagram/src/main/resources/templates/profile/modify.html
+++ b/Spring/Photostagram/src/main/resources/templates/profile/modify.html
@@ -4,6 +4,17 @@
       layout:decorate="~{layout/profileLayout}">
     <th:block layout:fragment="main">
         <div id="modi">
+          <div id="mySelect">
+              <div>
+                  <a th:href="@{/profile (username=${user.username})}">프로필</a>
+              </div>
+              <div class="currentMenu">
+                  <a th:href="@{/profile/modify}" class="currentSet">프로필 변경</a>
+              </div>
+              <div>
+                  <a th:href="@{/profile/changePass}">비밀번호 변경</a>
+              </div>
+          </div>
           <div id="myInfo">
               <div>
                   <div>
@@ -24,11 +35,10 @@
                         <a href="#" class="changeProf" id="profilePhoto">프로필 사진 바꾸기</a>
                       </th:block>
                   </div>
-              </div>
-              <form th:action="@{/profile/modify}" method="post">
-                  <input type="hidden" name="no" th:value="${user.no}"/>
-                  <table>
-                      <tbody>
+                  <form th:action="@{/profile/modify}" method="post">
+                      <input type="hidden" name="no" th:value="${user.no}"/>
+                      <table>
+                          <tbody>
                           <tr>
                               <td>
                                   <span>이름</span>
@@ -115,11 +125,12 @@
                               </td>
                           </tr>
                           */-->
-                      </tbody>
-                  </table>
-                  <input id="myModify" type="submit" value="제출">
-              </form>
-              <a href="#">탈퇴하기</a>
+                          </tbody>
+                      </table>
+                      <input id="myModify" type="submit" value="제출">
+                  </form>
+                  <a href="#">탈퇴하기</a>
+              </div>
           </div>
         </div>
         <div id="photoModal" class="photoModal">
