--- a/Spring/Photostagram/src/main/resources/static/css/style.css
+++ b/Spring/Photostagram/src/main/resources/static/css/style.css
@@ -199,7 +199,7 @@ body {
 
 .contents .comment_container .ContentsMore {
   font-size: 14px;
-  margin-bottom: 5px;
+  margin-top: 8px;
   display: inline-block;
   color: gray;
 }
@@ -213,6 +213,11 @@ body {
   text-overflow: ellipsis;
   display: inline-block;
   line-height: normal;
+  margin-bottom: 5px;
+}
+
+.contents .comment_container .comment .hashtag_text {
+
 }
 
 .contents .comment_container .small_heart {
@@ -434,6 +439,8 @@ body {
   width: 100%;
   height: 100%;
 }
+
+
 
 @media screen and (max-width: 1000px) {
   #header .inner {
