--- a/Spring/Photostagram/src/main/resources/templates/index.html
+++ b/Spring/Photostagram/src/main/resources/templates/index.html
@@ -97,7 +97,7 @@
                 <div class="user_name">
                   <div class="nick_name m_text">
                     <!------------- 게시글 상단 아이디입니다 --------------------->
-                    <a href="#" th:text="${article.memberVO.username}">KindTiger</a>
+                    <a href="#" th:text="${article.memberVO.username}">letary</a>
 
                     <span class="jum">•</span>
 
@@ -165,11 +165,9 @@
                   </div>
                   <!------------- 게시글 내용 입니다 ----------------->
                   <div class="mainContent" style="display: inline-block;">
-                    <div class="commentWord" th:text="${article.content}" style="color: #262626;"></div>
+                    <div class="commentWord" th:text="${article.content}" style="color: #262626;">내용</div>
                     <th:block th:each="hashtag : ${article.hashTagVO}">
-                      <a href="#" class="hashtag_text" style="color: #00376B;">
-                        #[[${hashtag.hashtag}]]
-                      </a>
+                      <a href="#" class="hashtag_text" style="color: #00376B;">#[[${hashtag.hashtag}]]</a>
                     </th:block>
                   </div>
                 </div>
@@ -206,7 +204,7 @@
               <input type="hidden" name="uid" th:value="${#authentication.principal.user.username}">
               <input type="hidden" name="postNo" th:value="${article.no}">
               <input type="hidden" name="userNo" th:value="${user.no}">
-              <input type="text" name="commentText" class="commentText" placeholder="댓글달기..." />
+                <input type="text" name="commentText" class="commentText" placeholder="댓글달기..." />
               <button class="upload_btn m_text">게시</button>
             </div>
           </article>
@@ -221,8 +219,8 @@
               <img src="./img/thumb.jpeg" alt="프로필사진" />
             </div>
             <div class="detail">
-              <div class="id m_text">KindTiger</div>
-              <div class="ko_name">김길동</div>
+              <div class="id m_text">letary</div>
+              <div class="ko_name" >김길동</div>
             </div>
             <div class="trans">
               <a href="#">전환</a>
@@ -273,6 +271,8 @@
               </div>
             </div>
           </article>
+
+
           <div class="info">
             <nav>
               <ul>
