--- a/Spring/Photostagram/src/main/resources/static/css/post.css
+++ b/Spring/Photostagram/src/main/resources/static/css/post.css
@@ -286,3 +286,13 @@
     .pContents > ul > li > a {font-size: 14px; font-weight: bold;}
     .pContents > ul > li:nth-child(1) > a {color: red;}
 
+    /*** 사진 비율 ***/
+    .mySlides{width:700px; height:700px;}
+    .picture-size{max-width:100%; height:100%;}
+
+    /*** 사진 슬라이드 ***/
+    .mySlide  {
+      overflow: hidden;
+    }
+
+
