--- a/Spring/Photostagram/src/main/resources/templates/board/post.html
+++ b/Spring/Photostagram/src/main/resources/templates/board/post.html
@@ -5,7 +5,15 @@
 <th:block layout:fragment="main">
     <div id="wrapper">
         <article id="post">
-            <section class="picture" ><img th:src="@{/img/700x700.png}" alt="picture"></section>
+            <section class="picture" >
+                <th:block th:each="images:${images}">
+                   <div class="mySlide">
+                    <div class="mySlides">
+                        <img class="picture-size" th:src="|@{/}thumb/${images.thumb}" alt="picture">
+                    </div>
+                   </div>
+                </th:block>
+            </section>
             <section class="contents">
                 <nav>
                     <div id="profile">
@@ -19,110 +27,110 @@
                     </div>
                     <a href="#">...</a>
                 </nav>
-                <ul>
-                    <li>
-                        <img class="proImg" th:src="@{/img/44884218_345707102882519_2446069589734326272_n.jpg}"  alt="profile">
-                        <div class="reply">
-                            <h1><span>[[${user.username}]]</span>[[${post.content}]]</h1>
-                            <th:block th:each="hash:${hashes}">
-                                <a href="#">#[[${hash.hashtag}]]</a>
-                            </th:block>
-                            <div>
-                                5주 &nbsp;&nbsp;
-                                좋아요 <span>100</span>개 &nbsp;&nbsp;
-                                <a href="#">답글달기</a>
+                    <ul>
+                        <li>
+                            <img class="proImg" th:src="@{/img/44884218_345707102882519_2446069589734326272_n.jpg}"  alt="profile">
+                            <div class="reply">
+                                <h1><span>[[${user.username}]]</span>[[${post.content}]]</h1>
+                                <th:block th:each="hash:${hashes}">
+                                    <a href="#">#[[${hash.hashtag}]]</a>
+                                </th:block>
+                                <div>
+                                    5주 &nbsp;&nbsp;
+                                    좋아요 <span>100</span>개 &nbsp;&nbsp;
+                                    <a href="#">답글달기</a>
+                                </div>
                             </div>
-                        </div>
-                        <a href="#" id="reHeart" class="reWhite">좋아요</a>
-                        <div class="showReply">
-                            <a href="#" class="reOpen">ㅡ 답글보기</a>
-                            <div class="listReply reHide">
-                                <ul class="reReply">
-                                    <li>
-                                        <img class="proImg" th:src="@{/img/44884218_345707102882519_2446069589734326272_n.jpg}" alt="profile">
-                                        <div class="reply">
-                                            <th:block th:each="comment:${comments}">
-                                            <h1><span>gildong</span>[[${comment.comment}]]</h1>
-                                            </th:block>
-                                            <a href="#">#해시태그</a>
-                                            <div>
-                                                5주 &nbsp;&nbsp;
-                                                좋아요 <span>100</span>개 &nbsp;&nbsp;
-                                                <a href="#">답글달기</a>
+                            <a href="#" id="reHeart" class="reWhite">좋아요</a>
+                            <div class="showReply">
+                                <a href="#" class="reOpen">ㅡ 답글보기</a>
+                                <div class="listReply reHide">
+                                    <ul class="reReply">
+                                        <li>
+                                            <img class="proImg" th:src="@{/img/44884218_345707102882519_2446069589734326272_n.jpg}" alt="profile">
+                                            <div class="reply">
+                                                <th:block th:each="comment:${comments}">
+                                                <h1><span>gildong</span>[[${comment.comment}]]</h1>
+                                                </th:block>
+                                                <a href="#">#해시태그</a>
+                                                <div>
+                                                    5주 &nbsp;&nbsp;
+                                                    좋아요 <span>100</span>개 &nbsp;&nbsp;
+                                                    <a href="#">답글달기</a>
+                                                </div>
                                             </div>
-                                        </div>
-                                        <a href="#" id="reHeart" class="reWhite">좋아요</a>
-                                    </li>
-                                    <li>
-                                        <img class="proImg" th:src="@{/img/44884218_345707102882519_2446069589734326272_n.jpg}"  alt="profile">
-                                        <div class="reply">
-                                            <h1><span>gildong</span>댓글 내용111111111111111111111111111111111111111111111111111111</h1>
-                                            <a href="#">#해시태그</a>
-                                            <div>
-                                                5주 &nbsp;&nbsp;
-                                                좋아요 <span>100</span>개 &nbsp;&nbsp;
-                                                <a href="#">답글달기</a>
+                                            <a href="#" id="reHeart" class="reWhite">좋아요</a>
+                                        </li>
+                                        <li>
+                                            <img class="proImg" th:src="@{/img/44884218_345707102882519_2446069589734326272_n.jpg}"  alt="profile">
+                                            <div class="reply">
+                                                <h1><span>gildong</span>댓글 내용111111111111111111111111111111111111111111111111111111</h1>
+                                                <a href="#">#해시태그</a>
+                                                <div>
+                                                    5주 &nbsp;&nbsp;
+                                                    좋아요 <span>100</span>개 &nbsp;&nbsp;
+                                                    <a href="#">답글달기</a>
+                                                </div>
                                             </div>
-                                        </div>
-                                        <a href="#" id="reHeart" class="reWhite">좋아요</a>
-                                    </li>
-                                    <li>
-                                        <img class="proImg" th:src="@{/img/44884218_345707102882519_2446069589734326272_n.jpg}"  alt="profile">
-                                        <div class="reply">
-                                            <h1><span>gildong</span>댓글 내용111111111111111111111111111111111111111111111111111111</h1>
-                                            <a href="#">#해시태그</a>
-                                            <div>
-                                                5주 &nbsp;&nbsp;
-                                                좋아요 <span>100</span>개 &nbsp;&nbsp;
-                                                <a href="#">답글달기</a>
+                                            <a href="#" id="reHeart" class="reWhite">좋아요</a>
+                                        </li>
+                                        <li>
+                                            <img class="proImg" th:src="@{/img/44884218_345707102882519_2446069589734326272_n.jpg}"  alt="profile">
+                                            <div class="reply">
+                                                <h1><span>gildong</span>댓글 내용111111111111111111111111111111111111111111111111111111</h1>
+                                                <a href="#">#해시태그</a>
+                                                <div>
+                                                    5주 &nbsp;&nbsp;
+                                                    좋아요 <span>100</span>개 &nbsp;&nbsp;
+                                                    <a href="#">답글달기</a>
+                                                </div>
                                             </div>
-                                        </div>
-                                        <a href="#" id="reHeart" class="reWhite">좋아요</a>
-                                    </li>
-                                    <li>
-                                        <img class="proImg" th:src="@{/img/44884218_345707102882519_2446069589734326272_n.jpg}"  alt="profile">
-                                        <div class="reply">
-                                            <h1><span>gildong</span>댓글 내용111111111111111111111111111111111111111111111111111111</h1>
-                                            <a href="#">#해시태그</a>
-                                            <div>
-                                                5주 &nbsp;&nbsp;
-                                                좋아요 <span>100</span>개 &nbsp;&nbsp;
-                                                <a href="#">답글달기</a>
+                                            <a href="#" id="reHeart" class="reWhite">좋아요</a>
+                                        </li>
+                                        <li>
+                                            <img class="proImg" th:src="@{/img/44884218_345707102882519_2446069589734326272_n.jpg}"  alt="profile">
+                                            <div class="reply">
+                                                <h1><span>gildong</span>댓글 내용111111111111111111111111111111111111111111111111111111</h1>
+                                                <a href="#">#해시태그</a>
+                                                <div>
+                                                    5주 &nbsp;&nbsp;
+                                                    좋아요 <span>100</span>개 &nbsp;&nbsp;
+                                                    <a href="#">답글달기</a>
+                                                </div>
                                             </div>
-                                        </div>
-                                        <a href="#" id="reHeart" class="reWhite">좋아요</a>
-                                    </li>
-                                    <li>
-                                        <img class="proImg" th:src="@{/img/44884218_345707102882519_2446069589734326272_n.jpg}"  alt="profile">
-                                        <div class="reply">
-                                            <h1><span>gildong</span>댓글 내용111111111111111111111111111111111111111111111111111111</h1>
-                                            <a href="#">#해시태그</a>
-                                            <div>
-                                                5주 &nbsp;&nbsp;
-                                                좋아요 <span>100</span>개 &nbsp;&nbsp;
-                                                <a href="#">답글달기</a>
+                                            <a href="#" id="reHeart" class="reWhite">좋아요</a>
+                                        </li>
+                                        <li>
+                                            <img class="proImg" th:src="@{/img/44884218_345707102882519_2446069589734326272_n.jpg}"  alt="profile">
+                                            <div class="reply">
+                                                <h1><span>gildong</span>댓글 내용111111111111111111111111111111111111111111111111111111</h1>
+                                                <a href="#">#해시태그</a>
+                                                <div>
+                                                    5주 &nbsp;&nbsp;
+                                                    좋아요 <span>100</span>개 &nbsp;&nbsp;
+                                                    <a href="#">답글달기</a>
+                                                </div>
                                             </div>
-                                        </div>
-                                        <a href="#" id="reHeart" class="reWhite">좋아요</a>
-                                    </li>
-                                    <li>
-                                        <img class="proImg" th:src="@{/img/44884218_345707102882519_2446069589734326272_n.jpg}"  alt="profile">
-                                        <div class="reply">
-                                            <h1><span>gildong</span>댓글 내용111111111111111111111111111111111111111111111111111111</h1>
-                                            <a href="#">#해시태그</a>
-                                            <div>
-                                                5주 &nbsp;&nbsp;
-                                                좋아요 <span>100</span>개 &nbsp;&nbsp;
-                                                <a href="#">답글달기</a>
+                                            <a href="#" id="reHeart" class="reWhite">좋아요</a>
+                                        </li>
+                                        <li>
+                                            <img class="proImg" th:src="@{/img/44884218_345707102882519_2446069589734326272_n.jpg}"  alt="profile">
+                                            <div class="reply">
+                                                <h1><span>gildong</span>댓글 내용111111111111111111111111111111111111111111111111111111</h1>
+                                                <a href="#">#해시태그</a>
+                                                <div>
+                                                    5주 &nbsp;&nbsp;
+                                                    좋아요 <span>100</span>개 &nbsp;&nbsp;
+                                                    <a href="#">답글달기</a>
+                                                </div>
                                             </div>
-                                        </div>
-                                        <a href="#" id="reHeart" class="reWhite">좋아요</a>
-                                    </li>
-                                </ul>
+                                            <a href="#" id="reHeart" class="reWhite">좋아요</a>
+                                        </li>
+                                    </ul>
+                                </div>
                             </div>
-                        </div>
-                    </li>
-                </ul>
+                        </li>
+                    </ul>
                 <div>
                     <div>
                         <a href="#" id="like" class="unlike"></a>
@@ -143,7 +151,7 @@
             </section>
         </article>
         <div id="more">
-            <div><span>gildong</span>님의 게시물 더 보기</div>
+            <div><span>[[${user.username}]]</span>님의 게시물 더 보기</div>
             <a href="#">
                 <img th:src="@{/img/300x300-1.png}" alt="pic">
             </a>
@@ -167,7 +175,7 @@
             <div class="pContents">
                 <div>
                     <img th:src="@{/img/44884218_345707102882519_2446069589734326272_n.jpg}">
-                    <h1><span>gildong</span>님의 팔로우를 취소하시겠어요?</h1>
+                    <h1><span>[[${user.username}]]</span>님의 팔로우를 취소하시겠어요?</h1>
                 </div>
                 <ul>
                     <li><a href="#" class="pClose" id="postUnFollow">팔로우 취소</a></li>
