--- a/Spring/Photostagram/src/main/resources/static/css/aside.css
+++ b/Spring/Photostagram/src/main/resources/static/css/aside.css
@@ -982,7 +982,7 @@ div.modal-post div.wrapper div.image {
 }
 div.modal-post div.wrapper div.image img {
   position: absolute;
-  width: 100%;
+  width: 590px !important;
   height: 100%;
 }
 div.modal-post div.wrapper div.image div.heart-wrapper {
@@ -1060,7 +1060,7 @@ div.modal-post div.wrapper div.post-content div.rest div.text {
   height: calc(100% - 32px);
   box-sizing: border-box;
   overflow-y: scroll;
-  padding: 20px;
+  padding: 5px 11px;
 }
 div.modal-post
   div.wrapper
@@ -1078,7 +1078,6 @@ div.modal-post
   div.comment-container {
   display: flex;
   width: 100%;
-  margin-bottom: 20px;
 }
 div.modal-post div.wrapper div.post-content div.rest div.text div.top img,
 div.modal-post
