--- a/Spring/Photostagram/src/main/resources/static/css/style.css
+++ b/Spring/Photostagram/src/main/resources/static/css/style.css
@@ -477,3 +477,16 @@ body {
     width: 95%;
   }
 }
+
+.bx-wrapper,
+.bx-wrapper img {
+    height: 100%;
+}
+
+.bx-wrapper .bx-viewport {
+    height: 100% !important;
+}
+.bx_slider {
+    width: 100%;
+    height: 100%;
+}
