--- a/Spring/Photostagram/src/main/resources/templates/profile/modify.html
+++ b/Spring/Photostagram/src/main/resources/templates/profile/modify.html
@@ -14,6 +14,9 @@
               <div>
                   <a th:href="@{/profile/changePass}">비밀번호 변경</a>
               </div>
+              <div>
+                  <a th:href="@{/profile/deleteUser}">탈퇴하기</a>
+              </div>
           </div>
           <div id="myInfo">
               <div>
