--- a/Spring/Photostagram/src/main/resources/static/css/profile.css
+++ b/Spring/Photostagram/src/main/resources/static/css/profile.css
@@ -562,4 +562,11 @@
     }
 
 
+    #deleteUserProfile {margin-left: 500px; width:1000px;}
+    #deleteUserProfile > h1 {font-size: 26px; text-align: center;}
+    #deleteUserProfile > h2 {font-size: 20px; text-align: center;}
+    #deleteUserProfile > h2 > a {font-size: 20px;}
+
+
+
 
