--- a/Spring/Photostagram/src/main/resources/static/css/profileModify.css
+++ b/Spring/Photostagram/src/main/resources/static/css/profileModify.css
@@ -144,3 +144,46 @@
     #mySelect > div:hover:not(.currentMenu) {cursor: pointer; background: #fafafa; border-left: 2px solid #a4a4a4;}
     #mySelect > .currentMenu {border-left: 2px solid black;}
     #mySelect > div > .currentSet {font-weight: bold;}
+
+
+    /*** deleteUser ***/
+
+    #modi > #myDelete {
+        float: left;
+        width: 800px;
+        height: 850px;
+        border: 1px solid #e9e9e9;
+        background: white;
+        margin-bottom: 100px;
+    }
+    #myDelete > div {
+       margin-top: 30px;
+       top: 20px;
+       position: relative;
+       left: 15px;
+    }
+
+    #myDelete > div > div:nth-child(1) {float: left; width: 45px; height:45px; border-radius: 70%; overflow:hidden;}
+    #myDelete > div > div > img {width: 100%; height: 100%; object-fit: cover;}
+    #myDelete > div > div {margin-left: 20px; margin-top:5px; float: left; width: 150px; position: relative;}
+    #myDelete > div > div > span {float: left; font-size: 18px;}
+    #myDelete > div > div > a {float: left; color: #32a4ff; font-weight: bold; font-size: 15px;}
+    #myDelete > form {
+       margin-left: 100px;
+       border-collapse: collapse;
+       margin-top: 100px;
+    }
+    #myDelete > form > table > tbody > tr {position: relative;}
+    #myDelete > form > table > tbody > tr > td:nth-child(1) {width: 150px; text-align:right;}
+    #myDelete > form > table > tbody > tr > td:nth-child(2) {padding: 15px;}
+    #myDelete > form > table > tbody > tr > td:nth-child(2) > input {width: 350px; height: 35px; border: 1px solid #dcdcdc; font-size: 15px;}
+    #myDelete > form > table > tbody > tr > td:nth-child(2) > textarea {width: 350px; height: 50px; border: 1px solid #dcdcdc; font-size: 15px; resize: none;}
+    #myDelete > form > table > tbody > tr > td:nth-child(2) > #check {width: 15px; height: 15px;}
+    #myDelete > form > table > tbody > tr > #private {color: #808080; font-size: 12px; width: 350px;}
+    #myDelete > form > table > tbody > tr > td:nth-child(1) > span {font-weight: bold; font-size: 17px;}
+    #myDelete > form > table > tbody > tr > td:nth-child(2) > span {display: block; color: #808080; width: 350px; font-size: 12px; margin-top: 10px;}
+    #myDelete > form > table > tbody > tr:nth-child(1) > td:nth-child(1) {position:relative; display: block; top: 20px;}
+    #myDelete > form > table > tbody > tr:nth-child(4) > td:nth-child(1) {position:relative; display: block; top: 20px;}
+    #myDelete > form > table > tbody > tr:nth-child(9) > td:nth-child(2) > span {float: left;}
+    #myDelete > form > table > tbody > tr:nth-child(9) > td:nth-child(2) {display: block;}
+
