--- a/Spring/Photostagram/src/main/resources/templates/index.html
+++ b/Spring/Photostagram/src/main/resources/templates/index.html
@@ -244,6 +244,9 @@
                     <span>&nbsp;ㆍ</span>&nbsp;
                     <button class="follow">팔로우</button>&nbsp;
                   </div>
+                  <div>
+                    asdasd
+                  </div>
 
 
                   <!-- modal 댓글 -->
